# python-project-52

./: .gitignore  Makefile  README.md  build.sh  manage.py  pyproject.toml  setup.cfg
.github/workflows/: python-ci.yml
task_manager/: factories.py  mixins.py  settings.py  tests.py  texts.py  urls.py  views.py
task_manager/labels/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py  0002_alter_label_created_at_alter_label_name.py
task_manager/statuses/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/tasks/: admin.py  filters.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_alter_task_status.py  0003_tasklabel_task_labels.py  0004_alter_task_labels.py
task_manager/templates/: index.html  login.html  logout.html  sign_up.html
task_manager/templates/errors/: 404.html  500.html
task_manager/templates/labels/: create.html  delete.html  index.html  update.html
task_manager/templates/layouts/: base.html  footer.html  header.html
task_manager/templates/statuses/: create.html  delete.html  index.html  update.html
task_manager/templates/tasks/: create.html  delete.html  detail.html  index.html  update.html
task_manager/templates/users/: create.html  delete.html  index.html  update.html
task_manager/users/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/users/migrations/: 0001_initial.py  0002_alter_user_first_name_alter_user_last_name.py
(+4 files in other folders)
