[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Simple task manager for life"
authors = ["Petr Malafeev"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
pylint = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
