[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Simple task manager for life"
authors = ["Petr Malafeev"]
readme = "README.md"
repository = "https://github.com/Pythonusus/python-project-52"
packages = [
  { include = "task_manager" },
]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
gunicorn = "^23.0.0"
django-bootstrap5 = "^24.3"
whitenoise = "^6.8.2"
dj-database-url = "^2.3.0"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.10"
django-extensions = "^3.2.3"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
pylint = "^3.3.1"
django-debug-toolbar = "^4.4.6"
factory-boy = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
